--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title></title>
   </head>
   <body>
+    <h1>Canvas</h1>
     <div class="wrapper">
       <canvas id="canvas">Your browser does not support canvas</canvas>
       <div class="controls">
