--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="canvas_style.css">
-    <script async src="canvas_script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script async src="script.js"></script>
     <title></title>
   </head>
   <body>
